--- a/react-app/app.yaml
+++ b/react-app/app.yaml
@@ -1,4 +1,5 @@
 runtime: nodejs12
+service: pets-webapp
 handlers:
 # Serve all static files with url ending with a file extension
 - url: /(.*\..+)$
