--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ag-grid-community/react": "^28.1.0",
+    "ag-grid-community": "^28.1.0",
+    "ag-grid-react": "^28.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "ag-grid-react": "^28.1.0",
     "axios": "^0.27.2",
     "bootstrap": "^4.6.0",
     "formik": "^2.2.9",
@@ -22,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
